# MIDI-to-DMX-Controller

./: CMakeLists.txt  README.md
resource/: MIDI_to_DMXeditor.uidesc
source/: MIDI_to_DMXcids.h  MIDI_to_DMXcontroller.cpp  MIDI_to_DMXcontroller.h  MIDI_to_DMXentry.cpp  MIDI_to_DMXprocessor.cpp  MIDI_to_DMXprocessor.h  version.h
